RESOLVED FIXED197791
The active tab sometimes app naps even though it should not
https://bugs.webkit.org/show_bug.cgi?id=197791
Summary The active tab sometimes app naps even though it should not
Chris Dumez
Reported 2019-05-10 11:59:16 PDT
The active tab sometimes app naps even though it should not.
Attachments
Patch (1.40 KB, patch)
2019-05-10 12:05 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-05-10 12:00:07 PDT
Chris Dumez
Comment 2 2019-05-10 12:05:43 PDT
Geoffrey Garen
Comment 3 2019-05-10 12:11:52 PDT
Comment on attachment 369579 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-05-10 12:41:42 PDT
Comment on attachment 369579 [details] Patch Clearing flags on attachment: 369579 Committed r245187: <https://trac.webkit.org/changeset/245187>
WebKit Commit Bot
Comment 5 2019-05-10 12:41:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.