The active tab sometimes app naps even though it should not https://bugs.webkit.org/show_bug.cgi?id=197791 <rdar://problem/48460054>

Reviewed by Geoffrey Garen.

The WebPage constructor was initializing m_activityState but not calling updateThrottleState().
As a result, we would not take a UserActivity even when warranted by the initial activity state.

* WebProcess/WebPage/WebPage.cpp:


Canonical link: https://commits.webkit.org/211926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245187 268f45cc-cd09-0410-ab3c-d52691b4dbfc